@@ -2,7 +2,7 @@
 
 <beans>
     <bean id="manager" class="edu.mcw.rgd.gff3.Manager">
-        <property name="version" value="--Gff3 generation pipeline -- build May 12, 2023 --" />
+        <property name="version" value="--Gff3 generation pipeline -- build Jun 05, 2023 --" />
     </bean>
 
     <bean id="geneManager" class="edu.mcw.rgd.gff3.CreateGff4Gene">
@@ -120,12 +120,12 @@
         <property name="outDir" value="data/Ensembl/"/>
         <property name="ensemblGff">
             <map>
-                <entry key="40"  value="ftp://ftp.ensembl.org/pub/current_gff3/homo_sapiens/Homo_sapiens.GRCh38.106.gff3.gz"></entry>
-                <entry key="240" value="ftp://ftp.ensembl.org/pub/current_gff3/mus_musculus/Mus_musculus.GRCm39.106.gff3.gz"></entry>
-                <entry key="912" value="ftp://ftp.ensembl.org/pub/current_gff3/sus_scrofa/Sus_scrofa.Sscrofa11.1.106.gff3.gz"></entry>
-                <entry key="373" value="ftp://ftp.ensembl.org/pub/current_gff3/rattus_norvegicus/Rattus_norvegicus.mRatBN7.2.106.gff3.gz"></entry>
-                <entry key="512" value="ftp://ftp.ensembl.org/pub/current_gff3/pan_paniscus/Pan_paniscus.panpan1.1.106.gff3.gz"></entry>
-                <entry key="638" value="ftp://ftp.ensembl.org/pub/current_gff3/canis_lupus_familiaris/Canis_lupus_familiaris.ROS_Cfam_1.0.106.gff3.gz"></entry>
+                <entry key="40"  value="ftp://ftp.ensembl.org/pub/current_gff3/homo_sapiens/Homo_sapiens.GRCh38.109.gff3.gz"></entry>
+                <entry key="240" value="ftp://ftp.ensembl.org/pub/current_gff3/mus_musculus/Mus_musculus.GRCm39.109.gff3.gz"></entry>
+                <entry key="912" value="ftp://ftp.ensembl.org/pub/current_gff3/sus_scrofa/Sus_scrofa.Sscrofa11.1.109.gff3.gz"></entry>
+                <entry key="373" value="ftp://ftp.ensembl.org/pub/current_gff3/rattus_norvegicus/Rattus_norvegicus.mRatBN7.2.109.gff3.gz"></entry>
+                <entry key="512" value="ftp://ftp.ensembl.org/pub/current_gff3/pan_paniscus/Pan_paniscus.panpan1.1.109.gff3.gz"></entry>
+                <entry key="638" value="ftp://ftp.ensembl.org/pub/current_gff3/canis_lupus_familiaris/Canis_lupus_familiaris.ROS_Cfam_1.0.109.gff3.gz"></entry>
             </map>
         </property>
         <property name="ensemblJBrowseDataDirs">
